# i3DE

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  i3DE.cpp  i3DE.sln  i3DE.vcxproj  i3DE.vcxproj.filters
Lorem/: IError.h  Import.cpp  Import.h  Logger.h  Unzip.cpp  Unzip.h
Tests/: BaseTest.cpp  ConvertTest.cpp  ConverterTest.cpp  ExtractorTest.cpp  ImporterTest.cpp  LoggerTest.cpp  ModDescTest.cpp  ReaderTest.cpp  Tests.vcxproj  Tests.vcxproj.filters  TypesTest.cpp  UnzipTest.cpp  UtilsTest.cpp  UtilsTest.cppm  i3DTest.cpp  i3dShapesTest.cpp  main.cppm  tests.cppm
libs/: Lorem.vcxproj  Lorem.vcxproj.filters  endian.vcxproj  endian.vcxproj.filters  (+6 more)
libs/Lorem/: CMakeLists.txt  Lorem.vcxproj  Lorem.vcxproj.filters
libs/Lorem/src/Lorem/: Base.cppm  Base.h  Convert.cpp  Convert.h  Converter.cpp  Converter.cppm  Converter.h  Error.h  Extractor.cpp  Extractor.cppm  Extractor.h  IError.h  Importer.cpp  Importer.h  Logger.h  ModDesc.cpp  ModDesc.h  Reader.cppm  Reader.h  Scene.cpp  Scene.cppm  Scene.h  Types.h  Unzip.cpp  Unzip.h  Utils.cpp  Utils.cppm  Utils.h  XML.h  error.cppm  i3D.cpp  i3D.h  logger.cppm  types.cppm  xml.cppm
libs/Lorem/src/Lorem/Cipher/: i3d.cppm
libs/Lorem/src/Lorem/Importer/FS/: Base.cpp  Base.cppm  Base.h  ModDesc.cpp  ModDesc.cppm  ModDesc.h  i3d.cpp  i3d.cppm  i3d.h  i3d.shapes.cpp  i3d.shapes.cppm  i3d.shapes.h
libs/Lorem/src/Lorem/Reader/: Base.cpp  Base.cppm  Base.h  Cipher.cppm  Endian.cppm  i3dCipher.cppm
libs/Lorem/src/Lorem/Scene/: Base.cppm  Material.cpp  Material.cppm  Material.h  Shape.cppm  Shape.h  Sound.cppm  Sound.h
(+10 files in other folders)
